@@ -11,7 +11,7 @@ AM_CONFIG_HEADER(src/config.h)
 AC_PROG_CC
 
 PKG_PROG_PKG_CONFIG()
-PKG_CHECK_MODULES(LIBINPUT, [libinput >= 1.3.3])
+PKG_CHECK_MODULES(LIBINPUT, [libinput >= 1.5])
 PKG_CHECK_MODULES(LIBUDEV,  [libudev])
 PKG_CHECK_MODULES(LIBEVDEV, [libevdev >= 0.4])
 
