@@ -49,6 +49,7 @@ enum options {
 	OPT_VERBOSE,
 	OPT_TAP_ENABLE,
 	OPT_TAP_DISABLE,
+	OPT_TAP_MAP,
 	OPT_DRAG_ENABLE,
 	OPT_DRAG_DISABLE,
 	OPT_DRAG_LOCK_ENABLE,
@@ -107,6 +108,7 @@ tools_usage(void)
 	       "--set-scroll-button=BTN_MIDDLE ... set the button to the given button code\n"
 	       "--set-profile=[adaptive|flat].... set pointer acceleration profile\n"
 	       "--set-speed=<value>.... set pointer acceleration speed (allowed range [-1, 1]) \n"
+	       "--set-tap-map=[lrm|lmr] ... set button mapping for tapping\n"
 	       "\n"
 	       "These options apply to all applicable devices, if a feature\n"
 	       "is not explicitly specified it is left at each device's default.\n"
@@ -136,6 +138,7 @@ tools_init_context(struct tools_context *context)
 
 	memset(options, 0, sizeof(*options));
 	options->tapping = -1;
+	options->tap_map = -1;
 	options->drag = -1;
 	options->drag_lock = -1;
 	options->natural_scroll = -1;
@@ -226,6 +229,20 @@ tools_parse_args(int argc, char **argv, struct tools_context *context)
 			break;
 		case OPT_TAP_DISABLE:
 			options->tapping = 0;
+			break;
+		case OPT_TAP_MAP:
+			if (!optarg) {
+				tools_usage();
+				return 1;
+			}
+			if (streq(optarg, "lrm")) {
+				options->tap_map = LIBINPUT_CONFIG_TAP_MAP_LRM;
+			} else if (streq(optarg, "lmr")) {
+				options->tap_map = LIBINPUT_CONFIG_TAP_MAP_LMR;
+			} else {
+				tools_usage();
+				return 1;
+			}
 			break;
 		case OPT_DRAG_ENABLE:
 			options->drag = 1;
@@ -478,6 +495,9 @@ tools_device_apply_config(struct libinput_device *device,
 {
 	if (options->tapping != -1)
 		libinput_device_config_tap_set_enabled(device, options->tapping);
+        if (options->tap_map != (enum libinput_config_tap_button_map)-1)
+                libinput_device_config_tap_set_button_map(device,
+                                                          options->tap_map);
 	if (options->drag != -1)
 		libinput_device_config_tap_set_drag_enabled(device,
 							    options->drag);
