@@ -48,6 +48,7 @@ struct tools_options {
 	int middlebutton;
 	enum libinput_config_click_method click_method;
 	enum libinput_config_scroll_method scroll_method;
+	enum libinput_config_tap_button_map tap_map;
 	int scroll_button;
 	double speed;
 	int dwt;
