@@ -1,5 +1,7 @@
 Version 0.0.6 -- UNRELEASED
 
+  * Add option --set-tap-map from libinput 1.5
+
 Version 0.0.5 -- 29 Jun 2017
 
   * Partial resync with libinput 1.6.0
